# wassette

./: .gitignore  CHANGELOG.md  Justfile
crates/wassette/src/: lib.rs  wasistate.rs
docs/development/: rust.md
examples/avs-rs/: Cargo.toml  README.md  policy.yaml
examples/avs-rs/src/: avs.rs  bindings.rs  lib.rs
examples/avs-rs/wit/: world.wit
examples/fetch-reqwest/: Cargo.toml  Justfile  README.md  policy.yaml
examples/fetch-reqwest/src/: bindings.rs  lib.rs
examples/fetch-reqwest/wit/: world.wit
examples/fetch-rs/: Cargo.toml
examples/fetch-rs/src/: lib.rs
src/: main.rs
