[package]
name = "avs-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde_json = "1.0.137"
wit-bindgen-rt = { version = "0.26.0", features = ["bitflags"] }
# We use spin-sdk for outbound HTTP to a host helper endpoint that proxies Azure (since native Azure SDK isn't WASI-ready).
spin-sdk = "=3.0.1"
spin-executor = "=3.0.1"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:avs-rs"

[workspace]
