[package]
name = "avs-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde_json = "1.0.137"
wit-bindgen-rt = { version = "0.37.0", features = ["bitflags"] }
spin-sdk = "5.0.0"
spin-executor = "5.0.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:avs-rs"

[workspace]
