[package]
name = "avs-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde_json = "1.0.137"
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
spin-executor = "5.0.0"
azure_mgmt_vmware = { path = "../../.../../../azure-sdk-for-rust/services/mgmt/vmware" }
azure_core = { path = "../../.../../../azure-sdk-for-rust2/sdk/core/azure_core" }
async-trait = "0.1"
futures = "0.3"
time = "0.3"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:avs-rs"

[workspace]
